Fixed overlay problems on mobile

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -55,36 +55,11 @@ h3 {
   width: 12.5%;
 }
 
-
-.readmore-dialog {
-  background: #ffffff;
-  font-family: 'Open Sans', sans-serif;
-  color: #666;
-  font-size: 16px;
-  line-height: 1.6em;
-  text-align:left;
-  width: 1000px !important;
-  max-height: 600px !important;
-  border: 3px solid #666;
-}
-
-.ui-dialog-titlebar {
-  background: #b20005;
-  font-family: 'Open Sans', sans-serif;
-  color:#ffffff;
-  font-size: 1.5em;
-  text-align: center;
-}
-
-.ui-dialog-titlebar-close {
-  color:white;
-}
-
 .center {
   text-align: center;
 }
 
-.open-dialog-colored{
+.open-reader{
   background-color: #e1e1e1;
   border-radius:3px;
   color: #b20005;
@@ -93,19 +68,14 @@ h3 {
   border: 0;
 }
 
-.open-dialog:hover{
+.open-reader:hover{
   text-decoration: underline;
 }
 
-.open-dialog{
-  background-color: #ffffff;
-  border-radius:3px;
-  color: #b20005;
-  border: 0;
-}
-
-.open-dialog-colored:hover{
-  text-decoration: underline;
+.small-title {
+  font-family: 'Open Sans', sans-serif;
+  color:#b20005;
+  font-size: 1.5em
 }
 
 .img-home-portfolio,
